--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
    </head> 
      <body>
-<h1>Test</h1>
-  <p>test</p>
+<h1>Deniz Yilmaz</h1>
+  <p>Hallo en welkom bij mijn site!</p>
     </body>
 </html>
