--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@
   <p>Hallo en welkom bij mijn site!</p>
     </body>
 </html>
-<h1 style="background-color:Tomato;">Tomato</h1>
+<h1 style="background-color:tomato;"></h1>
