--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    </head> 
      <body>
 <h1>Deniz Yilmaz</h1>
-  <p>Hallo en welkom bij mijn web.site!</p>
+  <p>Hallo en welkom bij mijn website!</p>
     </body>
 </html>
 <h1 style="background-color:tomato;">tomato</h1>
