--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
    </head> 
      <body>
 <h1>Deniz Yilmaz</h1>
-  <p>Hallo en welkom bij mijn website!</p>
+  <p style="font-size:medium; en welkom bij mijn website!</p>
     </body>
 </html>
 <h1 style="background-color:tomato;">tomato</h1>
+<img src="pic_trulli.jpg" alt="Italian Trulli">
