--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
    </head> 
      <body>
 <h1>Deniz Yilmaz</h1>
-  <p style="font-size:medium; en welkom bij mijn website!</p>
+  <p style="font-size:medium;">Hallo en welkom bij mijn website!</p>
+  
+  <img src="IMG_20240902_153421.jpg" alt="Italian Trulli">
     </body>
 </html>
 
-<img src="pic_trulli.jpg" alt="Italian Trulli">
