--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
      <body>
 <h1>Deniz Yilmaz</h1>
   <p style="font-size:medium;">Hallo en welkom bij mijn website!</p>
+  <p style="font-size:medium;">Hieronder zie je een foto van mij.</p>
   
   <img src="IMG_20240902_153421.jpg" alt="Italian Trulli">
     </body>
