--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <p style="font-size:medium;">Hallo en welkom bij mijn website!</p>
   <p style="font-size:medium;">Hieronder zie je een foto van mij.</p>
   
-  <img src="IMG_20240902_153421.jpg" alt="Italian Trulli">
+  <img src="IMG_20240902_153421.jpg" alt="Foto van mezelf">
+       <a href="pagina2.html">Klik hier voor de tweede pagina!</a>
     </body>
 </html>
 
