--- a/pagina2.html
+++ b/pagina2.html
@@ -4,6 +4,10 @@
 
    </head> 
      <body>
-        <h1>Dit is pagina 2</h1>
+        <h1>Wat over mezelf.</h1>
+        <h1>Wie ben ik?</h1>
+        <p style="font-size:medium;">Zoals je al in de eerste pagina kon zien, ik ben Deniz Yilmaz.</p>
+        <p style="font-size:medium;">Ik ben 15 jaar oud en ik ben Turks.</p>
+        <p style="font-size:medium;">Mijn hobbys zijn voetballen en gewoon in het algemeen met mijn vrienden naar buiten gaan</p>
     </body>
     </html>
