--- a/pagina2.html
+++ b/pagina2.html
@@ -8,6 +8,6 @@
         <h1>Wie ben ik?</h1>
         <p style="font-size:medium;">Zoals je al in de eerste pagina kon zien, ik ben Deniz Yilmaz.</p>
         <p style="font-size:medium;">Ik ben 15 jaar oud en ik ben Turks.</p>
-        <p style="font-size:medium;">Mijn hobbys zijn voetballen en gewoon in het algemeen met mijn vrienden naar buiten gaan</p>
+        <p style="font-size:medium;">Mijn hobbys zijn voetballen en gewoon in het algemeen met mijn vrienden naar buiten gaan. In de volgende pagina zal ik een beetje CSS gebruiken.</p>
     </body>
     </html>
