--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
    <head>
-
+       <!-- Linking to the external CSS file -->
+       <link rel="stylesheet" href="https://raw.githubusercontent.com/DenizYil123/DenizYil123.github.io/main/opmaak.css">
    </head> 
-     <body>
-<h1>Deniz Yilmaz</h1>
-  <p style="font-size:medium;">Hallo en welkom bij mijn website!</p>
-  <a href="pagina2.html">Klik hier voor de tweede pagina!</a>
-  <p style="font-size:medium;">Hieronder zie je een foto van mij.</p>
-  <img src="IMG_20240902_153421.jpg" alt="Foto van mezelf" width="1000" height="500">
-       
-    </body>
+   <body>
+       <h1>Deniz Yilmaz</h1>
+       <p style="font-size:medium;">Hallo en welkom bij mijn website!</p>
+       <a href="pagina2.html">Klik hier voor de tweede pagina!</a>
+       <p style="font-size:medium;">Hieronder zie je een foto van mij.</p>
+       <img src="IMG_20240902_153421.jpg" alt="Foto van mezelf" width="1000" height="500">
+   </body>
 </html>
-<link https://raw.githubusercontent.com/DenizYil123/DenizYil123.github.io/main/opmaak.css>
