--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>      
-       <link rel="stylesheet" href="https://raw.githubusercontent.com/DenizYil123/DenizYil123.github.io/main/opmaak.css">
+       <link rel="stylesheet" href="opmaak.css">
    </head> 
    <body>
        <h1>Deniz Yilmaz</h1>
