--- a/pagina2.html
+++ b/pagina2.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
    <head>
-
+      <link rel="stylesheet" href="opmaak.css">
    </head> 
      <body>
-        <h1>Wat over mezelf.</h1>
-        <h1>Wie ben ik?</h1>
-        <p style="font-size:medium;">Zoals je al in de eerste pagina kon zien, ik ben Deniz Yilmaz.</p>
-        <p style="font-size:medium;">Ik ben 15 jaar oud en ik ben Turks.</p>
-        <p style="font-size:medium;">Mijn hobbys zijn voetballen en gewoon in het algemeen met mijn vrienden naar buiten gaan.</p>
+      <ul>
+         <li><a href="default.asp">Home</a></li>
+         <li><a href="news.asp">News</a></li>
+         <li><a href="contact.asp">Contact</a></li>
+         <li><a href="about.asp">About</a></li>
+       </ul>   
     </body>
     </html>
