--- a/pagina3.html
+++ b/pagina3.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
    <head>  
-
+    <link rel="stylesheet" href="opmaak.css">
 </head> 
 <body>
-    
+<h1>Over mij</h1>
 </body>
 </html>    
        
