--- a/pagina3.html
+++ b/pagina3.html
@@ -5,6 +5,11 @@
 </head> 
 <body>
 <h1>Over mij</h1>
+<p>Mijn naam is Deniz en ik ben 15 jaar oud. Ik zit op het Vlietland College en ik doe Havo 4. 
+    Mijn favoriete vak is informatica. Later wil ik ook graag informatica studeren aan de Hogeschool van Leiden.
+    Mijn hobbys zijn voetballen en gamen. Ik zou het leuk vinden om later een game te maken of te werken bij grote bedrijven zoals Google.
+    
+</p>
 </body>
 </html>    
        
