--- a/pagina2.html
+++ b/pagina2.html
@@ -10,5 +10,6 @@
          <li><a href="contact.asp">Contact</a></li>
          <li><a href="about.asp">About</a></li>
        </ul>   
+       <h1>Waar wil je naar toe?</h1>
     </body>
     </html>
