--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <body>
        <h1>Deniz Yilmaz</h1>
        <p style="font-size:medium;">Hallo en welkom bij mijn website!</p>
-       <a href="pagina2.html">Klik hier voor de tweede pagina!</a>
+       <a href="pagina2.html" class="hover-effect">Klik hier voor de tweede pagina!</a>
        <p style="font-size:medium;">Hieronder zie je een foto van mij.</p>
        <img src="IMG_20240902_153421.jpg" alt="Foto van mezelf" width="1000" height="500">
    </body>
