--- a/pagina3.html
+++ b/pagina3.html
@@ -10,10 +10,11 @@
         <li><a href="contact.asp">Contact</a></li>
         <li><a href="about.asp">About</a></li>
       </ul>
-<h1>Over mij</h1>
-<p>Mijn naam is Deniz en ik ben 15 jaar oud. Ik zit op het Vlietland College en ik doe Havo 4. 
-    Mijn favoriete vak is informatica. Later wil ik ook graag informatica studeren aan de Hogeschool van Leiden.
-    Mijn hobbys zijn voetballen en gamen. Ik zou het leuk vinden om later een game te maken of te werken bij grote bedrijven zoals Google.
+      <h1 class="fade-in-title">Over mij</h1>
+      <p class="slide-up-text">Mijn naam is Deniz en ik ben 15 jaar oud. Ik zit op het Vlietland College en ik doe Havo 4. 
+         Mijn favoriete vak is informatica. Later wil ik ook graag informatica studeren aan de Hogeschool van Leiden.
+         Mijn hobbys zijn voetballen en gamen. Ik zou het leuk vinden om later een game te maken of te werken bij grote bedrijven zoals Google.
+      </p>
 </p>
 </body>
 </html>    
