--- a/pagina2.html
+++ b/pagina2.html
@@ -7,7 +7,7 @@
       <ul>
          <li><a href="index.html">Home</a></li>
          <li><a href="pagina3.html">Over mij</a></li>
-         <li><a href="contact.asp">Contact</a></li>
+         <li><a href="pagina4.html">Het Binaire Stelsel</a></li>
          <li><a href="about.asp">About</a></li>
        </ul>   
        <h1 class="animated-text">Waar wil je naar toe?</h1>
