--- a/pagina3.html
+++ b/pagina3.html
@@ -7,7 +7,7 @@
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="pagina3.html">Over mij</a></li>
-        <li><a href="contact.asp">Contact</a></li>
+        <li><a href="pagina4.html">Het Binaire Stelsel</a></li>
         <li><a href="about.asp">About</a></li>
       </ul>
       <h1 class="fade-in-title">Over mij</h1>
