--- a/pagina3.html
+++ b/pagina3.html
@@ -6,9 +6,9 @@
 <body>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="pagina3.html">Over mij</a></li>
-        <li><a href="pagina4.html">Het Binaire Stelsel</a></li>
-        <li><a href="about.asp">About</a></li>
+         <li><a href="pagina3.html">Over mij</a></li>
+         <li><a href="pagina4.html">Het Binaire Stelsel</a></li>
+         <li><a href="pagina5.html">Kleurmodellen</a></li>
       </ul>
       <h1 class="fade-in-title">Over mij</h1>
       <p class="slide-up-text">Mijn naam is Deniz en ik ben 15 jaar oud. Ik zit op het Vlietland College en ik doe Havo 4. 
