--- a/pagina4.html
+++ b/pagina4.html
@@ -6,9 +6,9 @@
 <body>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="pagina3.html">Over mij</a></li>
-        <li><a href="pagina4.html">Het Binaire Stelsel</a></li>
-        <li><a href="about.asp">About</a></li>
+         <li><a href="pagina3.html">Over mij</a></li>
+         <li><a href="pagina4.html">Het Binaire Stelsel</a></li>
+         <li><a href="pagina5.html">Kleurmodellen</a></li>
       </ul>
       <h1>Het Binaire Stelsel</h1>
     </body>
