--- a/pagina5.html
+++ b/pagina5.html
@@ -10,5 +10,6 @@
         <li><a href="pagina4.html">Het Binaire Stelsel</a></li>
         <li><a href="pagina5.html">Kleurmodellen</a></li>
        </ul>   
+       <h1>Kleurmodellen</h1>
     </body>
     </html>
