--- a/pagina4.html
+++ b/pagina4.html
@@ -10,6 +10,6 @@
          <li><a href="pagina4.html">Het Binaire Stelsel</a></li>
          <li><a href="pagina5.html">Kleurmodellen</a></li>
       </ul>
-      <h1>Het Binaire Stelsel</h1>
+      <h1 class="fade-in-title">Het Binaire Stelsel</h1>
     </body>
     </html> 
