--- a/pagina4.html
+++ b/pagina4.html
@@ -11,5 +11,6 @@
          <li><a href="pagina5.html">Kleurmodellen</a></li>
       </ul>
       <h1 class="fade-in-title">Het Binaire Stelsel</h1>
+      <iframe src="https://games.penjee.com/binary-bonanza/game.php" width="700" height="500" frameborder="no" scrolling="no" ></iframe>
     </body>
     </html> 
