--- a/pagina4.html
+++ b/pagina4.html
@@ -11,7 +11,7 @@
          <li><a href="pagina5.html">Kleurmodellen</a></li>
       </ul>
       <h1 class="fade-in-title">Het Binaire Stelsel</h1>
-      <p>Het binaire talstelsel of tweetallig talstelsel is een positiestelsel, waarin een getal wordt voorgesteld door een rijtje van de cijfers 0 en 1. Een dergelijk cijfer wordt in deze context een bit ("binary digit") genoemd.</p>
+      <p class="slide-up-text">Het binaire talstelsel of tweetallig talstelsel is een positiestelsel, waarin een getal wordt voorgesteld door een rijtje van de cijfers 0 en 1. Een dergelijk cijfer wordt in deze context een bit ("binary digit") genoemd.</p>
       <iframe src="https://games.penjee.com/binary-bonanza/game.php" width="700" height="500" frameborder="no" scrolling="no" ></iframe>
     </body>
     </html> 
