--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
        <h1>Deniz Yilmaz</h1>
        <p style="font-size:medium;">Hallo en welkom bij mijn website!</p>
        <a href="pagina2.html" class="hover-effect">Klik hier voor de tweede pagina!</a>
-       <p style="font-size:medium;">Hieronder zie je een foto van mij.</p>
+       <p style="font-size:medium;">Thomas je relt</p>
        
    </body>
 </html>
