--- a/pagina4.html
+++ b/pagina4.html
@@ -10,7 +10,9 @@
          <li><a href="pagina4.html">Het Binaire Stelsel</a></li>
          <li><a href="pagina5.html">Kleurmodellen</a></li>
       </ul>
-      <h1>Het Binaire Stelsel</h1>
+      <h1>Het Binaire Stelsel
+        Wat is het?
+      </h1>
       <p>Het binaire talstelsel of tweetallig talstelsel is een positiestelsel, waarin een getal wordt voorgesteld door een rijtje van de cijfers 0 en 1. Een dergelijk cijfer wordt in deze context een bit ("binary digit") genoemd.</p>
       <p>Bij geautomatiseerde opslag en communicatie van gegevens (zoals binnen en tussen computers in de ruime zin van het woord) worden deze meestal binair gecodeerd, dat wil zeggen als een reeks bits. Voor betere leesbaarheid wordt zo'n reeks bits vaak weergegeven in het hexadecimale of het octale talstelsel, die beide nauw verwant zijn met het binaire. Zie ook BCD-code, als een tussenvorm tussen decimaal en binair.
         Octale en hexadecimale getallen zijn uit binaire getallen af te leiden, namelijk door de binaire cijfers in groepjes van 3 (octaal) of 4 (hexadecimaal) te verdelen en deze groepjes van 3 respectievelijk 4 binaire cijfers steeds tot één octaal respectievelijk hexadecimaal cijfer om te zetten. Dit principe geldt voor alle getalstelsels waarvan het aantal cijfers een macht van twee is.
