--- a/pagina4.html
+++ b/pagina4.html
@@ -10,7 +10,7 @@
          <li><a href="pagina4.html">Het Binaire Stelsel</a></li>
          <li><a href="pagina5.html">Kleurmodellen</a></li>
       </ul>
-      <h1>Het Binaire Stelsel
+      <h1>Het Binaire Stelsel /
         Wat is het?
       </h1>
       <p>Het binaire talstelsel of tweetallig talstelsel is een positiestelsel, waarin een getal wordt voorgesteld door een rijtje van de cijfers 0 en 1. Een dergelijk cijfer wordt in deze context een bit ("binary digit") genoemd.</p>
