--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
        <p style="font-size:medium;">Hallo en welkom bij mijn website!</p>
        <a href="pagina2.html" class="hover-effect">Klik hier voor de tweede pagina!</a>
        <p style="font-size:medium;">Thomas je relt</p>
-       <img src="" alt="">
+       <img src="emoji.png" alt="Emoji">
        
    </body>
 </html>
