--- a/pagina4.html
+++ b/pagina4.html
@@ -13,10 +13,8 @@
       <h1>Het Binaire Stelsel /
         Wat is het?
       </h1>
-      <p>Het binaire talstelsel of tweetallig talstelsel is een positiestelsel, waarin een getal wordt voorgesteld door een rijtje van de cijfers 0 en 1. Een dergelijk cijfer wordt in deze context een bit ("binary digit") genoemd.</p>
-      <p>Bij geautomatiseerde opslag en communicatie van gegevens (zoals binnen en tussen computers in de ruime zin van het woord) worden deze meestal binair gecodeerd, dat wil zeggen als een reeks bits. Voor betere leesbaarheid wordt zo'n reeks bits vaak weergegeven in het hexadecimale of het octale talstelsel, die beide nauw verwant zijn met het binaire. Zie ook BCD-code, als een tussenvorm tussen decimaal en binair.
-        Octale en hexadecimale getallen zijn uit binaire getallen af te leiden, namelijk door de binaire cijfers in groepjes van 3 (octaal) of 4 (hexadecimaal) te verdelen en deze groepjes van 3 respectievelijk 4 binaire cijfers steeds tot één octaal respectievelijk hexadecimaal cijfer om te zetten. Dit principe geldt voor alle getalstelsels waarvan het aantal cijfers een macht van twee is.
-        Om een binair getal te vertalen naar een decimaal getal, hoeft men slechts te kijken naar de posities waar een 1 staat. Voor ieder binair cijfer 1 berekent men de door de positie van dit cijfer aangegeven macht van twee, en wel: 2positie − 1. De som van de op deze wijze berekende reeks decimale getallen geeft de waarde van het binaire getal decimaal weer. De eerste positie is de meest rechtse en komt overeen met het getal 1. De tweede positie, de tweede van rechts, komt overeen met het getal 2, de derde van rechts met 4, enz.</p>
+      <p>Het binaire stelsel is een getalsysteem gebaseerd op twee cijfers: 0 en 1. Het gebruikt de basis 2, wat betekent dat elke plaatswaarde in een binaire getallenreeks een macht van 2 is (2^0, 2^1, 2^2, enzovoort).</p>
+      <p>Computers gebruiken het binaire stelsel omdat ze werken met elektrische signalen die ofwel aan (1) of uit (0) kunnen zijn. Dit maakt het eenvoudig om informatie op te slaan en te verwerken met behulp van elektronische schakelingen.</p>
         <p>Hieronder zie je een spel genaamd Binary Bonzanza. Het is een leuk spel die je helpt met het binaire stelsel.</p>
       <iframe src="https://games.penjee.com/binary-bonanza/game.php" width="700" height="500" frameborder="no" scrolling="no" ></iframe>
     </body>
