--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
        <h1>Deniz Yilmaz</h1>
        <p style="font-size:medium;">Hallo en welkom bij mijn website!</p>
        <a href="pagina2.html" class="hover-effect">Klik hier voor de tweede pagina!</a>
-       <p>Klik op de link hierboven om bij het menu te komen en te beginnen met deze website ontdekken.</p>
+       <p>Ik wens je veel plezier bij het ontdekken van deze site.</p>
        <img src="emoji.png" alt="Emoji" width="100" height="100">    
    </body>
 </html>
