--- a/pagina5.html
+++ b/pagina5.html
@@ -15,6 +15,6 @@
          RGB staat voor Rood Groen Blauw, de 3 belangrijkste kleuren. Kleuren worden gemaakt door deze 3 te combineren. Meer licht maakt de kleur lichter.
          Het wordt gebruikt op shcermen zoals televisies of computers.
        </p>
-       <img src="download.png" alt="RGB en CMYK">
+       <img src="RGBCMYK.png" alt="RGB en CMYK">
     </body>
     </html>
