--- a/pagina5.html
+++ b/pagina5.html
@@ -11,10 +11,10 @@
         <li><a href="pagina5.html">Kleurmodellen</a></li>
        </ul>   
        <h1>Kleurmodellen / Wat is het?</h1>
-       <p>Kleurmodellen zijn systemen die ons helpen kleuren op een gestructureerde manier te beschrijven. Ze zijn belangrijk omdat ze bepalen hoe kleuren worden weergegeven op verschillende apparaten, zoals computerschermen en printers. Elk kleurmodel heeft een eigen manier om kleuren te definiëren, afhankelijk van hoe kleuren worden gecombineerd en weergegeven.
-         RGB staat voor Rood Groen Blauw, de 3 belangrijkste kleuren. Kleuren worden gemaakt door deze 3 te combineren. Meer licht maakt de kleur lichter.
-         Het wordt gebruikt op shcermen zoals televisies of computers.
-       </p>
+       <p>Kleurmodellen zijn systemen die ons helpen kleuren op een gestructureerde manier te beschrijven. Ze zijn belangrijk omdat ze bepalen hoe kleuren worden weergegeven op verschillende apparaten, zoals computerschermen en printers. Elk kleurmodel heeft een eigen manier om kleuren te definiëren, afhankelijk van hoe kleuren worden gecombineerd en weergegeven.</p>
+       <h1>RGB</h1> 
+       <p>RGB staat voor Rood Groen Blauw, de 3 belangrijkste kleuren. Kleuren worden gemaakt door deze 3 te combineren. Meer licht maakt de kleur lichter.
+         Het wordt gebruikt op shcermen zoals televisies of computers.</p>
        <img src="RGBCMYK.png" alt="RGB en CMYK">
     </body>
     </html>
