--- a/pagina6.html
+++ b/pagina6.html
@@ -10,7 +10,9 @@
          <li><a href="pagina4.html">Het Binaire Stelsel</a></li>
          <li><a href="pagina5.html">Kleurmodellen</a></li>
          <li><a href="pagina6.html">Bitmap- en Vectorafbeeldingen</a></li>
-       </ul>   
-       <h1 class="animated-text">Waar wil je naar toe?</h1>
-    </body>
-    </html>
+       </ul>
+       <h1>Bitmap- en Vectorafbeeldingen</h1>
+       <body>
+        <html>
+        
+       
