--- a/pagina5.html
+++ b/pagina5.html
@@ -6,9 +6,10 @@
      <body>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="pagina3.html">Over mij</a></li>
-        <li><a href="pagina4.html">Het Binaire Stelsel</a></li>
-        <li><a href="pagina5.html">Kleurmodellen</a></li>
+         <li><a href="pagina3.html">Over mij</a></li>
+         <li><a href="pagina4.html">Het Binaire Stelsel</a></li>
+         <li><a href="pagina5.html">Kleurmodellen</a></li>
+         <li><a href="pagina6.html">Bitmap- en Vectorafbeeldingen</a></li>
        </ul>   
        <h1>Kleurmodellen / Wat is het?</h1>
        <p>Kleurmodellen zijn systemen die ons helpen kleuren op een gestructureerde manier te beschrijven. Ze zijn belangrijk omdat ze bepalen hoe kleuren worden weergegeven op verschillende apparaten, zoals computerschermen en printers. Elk kleurmodel heeft een eigen manier om kleuren te definiëren, afhankelijk van hoe kleuren worden gecombineerd en weergegeven.</p>
