--- a/pagina4.html
+++ b/pagina4.html
@@ -5,10 +5,11 @@
 </head> 
 <body>
     <ul>
-        <li><a href="index.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
          <li><a href="pagina3.html">Over mij</a></li>
          <li><a href="pagina4.html">Het Binaire Stelsel</a></li>
          <li><a href="pagina5.html">Kleurmodellen</a></li>
+         <li><a href="pagina6.html">Bitmap- en Vectorafbeeldingen</a></li>
       </ul>
       <h1>Het Binaire Stelsel /
         Wat is het?
