--- a/pagina3.html
+++ b/pagina3.html
@@ -10,6 +10,7 @@
       <li><a href="pagina4.html">Het Binaire Stelsel</a></li>
       <li><a href="pagina5.html">Kleurmodellen</a></li>
       <li><a href="pagina6.html">Bitmap- en Vectorafbeeldingen</a></li>
+      <li><a href="pagina7.html">Compressie</a></li>
       </ul>
       <h1>Over mij</h1>
       <p>Mijn naam is Deniz en ik ben 15 jaar oud. Ik zit op het Vlietland College en ik doe Havo 4. 
