--- a/pagina2.html
+++ b/pagina2.html
@@ -10,6 +10,7 @@
          <li><a href="pagina4.html">Het Binaire Stelsel</a></li>
          <li><a href="pagina5.html">Kleurmodellen</a></li>
          <li><a href="pagina6.html">Bitmap- en Vectorafbeeldingen</a></li>
+         <li><a href="pagina7.html">Compressie</a></li>
        </ul>   
        <h1 class="animated-text">Waar wil je naar toe?</h1>
     </body>
