--- a/pagina7.html
+++ b/pagina7.html
@@ -12,6 +12,6 @@
          <li><a href="pagina6.html">Bitmap- en Vectorafbeeldingen</a></li>
          <li><a href="pagina7.html">Compressie</a></li>
        </ul>
-       <h1>Compressie</h1>
+       <h1>Compressie / Wat is het?</h1>
        <body>
         <html>
