--- a/pagina6.html
+++ b/pagina6.html
@@ -12,7 +12,7 @@
          <li><a href="pagina6.html">Bitmap- en Vectorafbeeldingen</a></li>
          <li><a href="pagina7.html">Compressie</a></li>
        </ul>
-       <h1>Bitmap- en Vectorafbeeldingen</h1>
+       <h1>Bitmap- en Vectorafbeeldingen / Wat is het?</h1>
        <body>
         <html>
         
