--- a/pagina6.html
+++ b/pagina6.html
@@ -13,7 +13,8 @@
          <li><a href="pagina7.html">Compressie</a></li>
        </ul>
        <h1>Bitmap- en Vectorafbeeldingen / Wat is het?</h1>
-       <p></p>
+       <p>Wat zijn bitmapafbeeldingen? Een bitmap of rasterafbeelding is een digitale afbeelding die is samengesteld uit een matrix van punten. Wanneer bekeken op 100%, komt elke stip overeen met een individuele pixel op een scherm. 
+         In een standaard bitmapafbeelding kan aan elke stip een andere kleur worden toegewezen.</p>
        <body>
         <html>
         
