--- a/pagina7.html
+++ b/pagina7.html
@@ -13,5 +13,8 @@
          <li><a href="pagina7.html">Compressie</a></li>
        </ul>
        <h1>Compressie / Wat is het?</h1>
+       <p>Compressie betekent letterlijk samendrukken. 
+         In de computer en telecommunicatiewereld wordt hiermee bedoeld dat een bestand wordt verkleind op een zodanige wijze dat er geen informatie verloren gaat. 
+         De compressiefactor ligt dan ook niet vast.</p>
        <body>
         <html>
