--- a/pagina3.html
+++ b/pagina3.html
@@ -17,7 +17,7 @@
          Mijn favoriete vak is informatica. Later wil ik ook graag informatica studeren aan de Hogeschool van Leiden.
          Mijn hobbys zijn voetballen en gamen. Ik zou het leuk vinden om later een game te maken of te werken bij grote bedrijven zoals Google.
       </p>
-</p>
+      <img src="VLC.png" alt="VLC">
 </body>
 </html>    
        
