--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
        <link rel="stylesheet" href="opmaak.css">
    </head> 
    <body>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="pagina3.html">Over mij</a></li>
+        <li><a href="pagina4.html">Het Binaire Stelsel</a></li>
+        <li><a href="pagina5.html">Kleurmodellen</a></li>
+        <li><a href="pagina6.html">Bitmap- en Vectorafbeeldingen</a></li>
+        <li><a href="pagina7.html">Compressie</a></li>
+      </ul>   
        <h1>Deniz Yilmaz</h1>
        <p style="font-size:medium;">Hallo en welkom bij mijn website!</p>
        <a href="pagina2.html" class="hover-effect">Klik hier voor de tweede pagina!</a>
