--- a/pagina4.html
+++ b/pagina4.html
@@ -15,8 +15,8 @@
       <h1>Het Binaire Stelsel /
         Wat is het?
       </h1>
-      <p>Het binaire stelsel is een getalsysteem gebaseerd op twee cijfers: 0 en 1. Het gebruikt de basis 2, wat betekent dat elke plaatswaarde in een binaire getallenreeks een macht van 2 is (2^0, 2^1, 2^2, enzovoort).</p>
-      <p>Computers gebruiken het binaire stelsel omdat ze werken met elektrische signalen die ofwel aan (1) of uit (0) kunnen zijn. Dit maakt het eenvoudig om informatie op te slaan en te verwerken met behulp van elektronische schakelingen.</p>
+      <p>Het binaire stelsel is een getalsysteem gebaseerd op twee cijfers: 0 en 1. Het gebruikt de basis 2, wat betekent dat elke plaatswaarde in een binaire getallenreeks een macht van 2 is (2^0, 2^1, 2^2, enzovoort).
+      Computers gebruiken het binaire stelsel omdat ze werken met elektrische signalen die ofwel aan (1) of uit (0) kunnen zijn. Dit maakt het eenvoudig om informatie op te slaan en te verwerken met behulp van elektronische schakelingen.</p>
         <p>Hieronder zie je een spel genaamd Binary Bonzanza. Het is een leuk spel die je helpt met het binaire stelsel.</p>
       <iframe src="https://games.penjee.com/binary-bonanza/game.php" width="700" height="500" frameborder="no" scrolling="no" ></iframe>
     </body>
