--- a/pagina6.html
+++ b/pagina6.html
@@ -13,9 +13,8 @@
          <li><a href="pagina7.html">Compressie</a></li>
        </ul>
        <h1>Bitmap- en Vectorafbeeldingen / Wat is het?</h1>
-       <p>Wat zijn bitmapafbeeldingen? Een bitmap of rasterafbeelding is een digitale afbeelding die is samengesteld uit een matrix van punten. 
-        Wanneer bekeken op 100%, komt elke stip overeen met een individuele pixel op een scherm. 
-         In een standaard bitmapafbeelding kan aan elke stip een andere kleur worden toegewezen.</p>
+       <p>Een bitmap-afbeelding bestaat uit duizenden kleine puntjes die we pixels noemen. Elk van die puntjes heeft een eigen kleur. Als je een foto of afbeelding op je scherm ziet, zijn het die pixels die samen het hele plaatje vormen. 
+         Wanneer je een bitmap-afbeelding vergroot, worden de pixels ook groter, waardoor de afbeelding er blokkerig en minder scherp uitziet.</p>
        <body>
         <html>
         
