--- a/pagina4.html
+++ b/pagina4.html
@@ -12,8 +12,7 @@
          <li><a href="pagina6.html">Bitmap- en Vectorafbeeldingen</a></li>
          <li><a href="pagina7.html">Compressie</a></li>
       </ul>
-      <h1>Het Binaire Stelsel /
-        Wat is het?
+      <h1>Het Binaire Stelsel / Wat is het?
       </h1>
       <p>Het binaire stelsel is een getalsysteem gebaseerd op twee cijfers: 0 en 1. Het gebruikt de basis 2, wat betekent dat elke plaatswaarde in een binaire getallenreeks een macht van 2 is (2^0, 2^1, 2^2, enzovoort).
       Computers gebruiken het binaire stelsel omdat ze werken met elektrische signalen die ofwel aan (1) of uit (0) kunnen zijn. Dit maakt het eenvoudig om informatie op te slaan en te verwerken met behulp van elektronische schakelingen.</p>
