--- a/pagina7.html
+++ b/pagina7.html
@@ -13,8 +13,23 @@
          <li><a href="pagina7.html">Compressie</a></li>
        </ul>
        <h1>Compressie / Wat is het?</h1>
-       <p>Compressie betekent letterlijk samendrukken. 
-         In de computer en telecommunicatiewereld wordt hiermee bedoeld dat een bestand wordt verkleind op een zodanige wijze dat er geen informatie verloren gaat. 
-         De compressiefactor ligt dan ook niet vast.</p>
+       <p>Compressie is een manier om bestanden kleiner te maken, zodat ze minder ruimte innemen of sneller verstuurd kunnen worden. 
+        Er zijn twee soorten compressie: verliesloos en verlieslatend.</p>
+        <h1>Verliesloze compressie</h1>
+        <p>Bij verliesloze compressie worden de bestanden kleiner gemaakt zonder dat er iets verloren gaat. 
+          Je kunt het bestand altijd weer precies herstellen zoals het was.</p>
+          <p>Voorbeelden: ZIP-bestanden en PNG-afbeeldingen.</p>
+          <p>Voordeel: Je verliest geen kwaliteit.</p>
+          <p>Nadeel: De bestanden worden niet heel veel kleiner.</p>
+          <h1> Verlieslatende compressie</h1>
+          <p>Bij verlieslatende compressie worden sommige gegevens verwijderd om het bestand veel kleiner te maken. 
+            Dit kan wel leiden tot een beetje kwaliteitsverlies, omdat details verloren gaan.</p>
+            <p>Voorbeelden: JPEG-afbeeldingen en MP3-muziekbestanden.</p>
+            <p>Voordeel: De bestanden worden heel klein.</p>
+            <p>Nadeel: De kwaliteit kan iets minder worden.</p>
+            <h1>Waarom gebruiken we compressie?</h1>
+            <p>Minder ruimte: Je kunt meer bestanden opslaan.</p>
+            <p>Sneller versturen: Kleine bestanden kunnen sneller via internet verstuurd worden.</p>
+            <p>Kortom, verliesloze compressie houdt de kwaliteit, en verlieslatende compressie maakt het bestand veel kleiner, maar kan wat details verliezen.</p>
        <body>
         <html>
