--- a/pagina4.html
+++ b/pagina4.html
@@ -12,11 +12,21 @@
          <li><a href="pagina6.html">Bitmap- en Vectorafbeeldingen</a></li>
          <li><a href="pagina7.html">Compressie</a></li>
       </ul>
-      <h1>Het Binaire Stelsel / Wat is het?
-      </h1>
-      <p>Het binaire stelsel is een getalsysteem gebaseerd op twee cijfers: 0 en 1. Het gebruikt de basis 2, wat betekent dat elke plaatswaarde in een binaire getallenreeks een macht van 2 is (2^0, 2^1, 2^2, enzovoort).
-      Computers gebruiken het binaire stelsel omdat ze werken met elektrische signalen die ofwel aan (1) of uit (0) kunnen zijn. Dit maakt het eenvoudig om informatie op te slaan en te verwerken met behulp van elektronische schakelingen.</p>
-        <p>Hieronder zie je een spel genaamd Binary Bonzanza. Het is een leuk spel die je helpt met het binaire stelsel.</p>
+      <h1>Het Binaire Stelsel / Wat is het?</h1>
+      <p>Het binaire stelsel is een manier van tellen met alleen de cijfers 0 en 1. Computers gebruiken dit systeem omdat ze alleen twee toestanden kunnen herkennen: aan (1) en uit (0).</p>
+      <h1>Hoe werkt het binaire stelsel?</h1>  
+      <p>Net zoals wij tellen met de cijfers 0 tot 9 (decimaal), telt het binaire systeem met alleen 0 en 1. In plaats van dat de getallen oplopen met tientallen, zoals in ons systeem (10, 100, 1000), lopen ze in binair op met tweetallen:
+
+        1, 2, 4, 8, 16, enzovoort.</p>
+        <p>Voorbeeld:
+          Het binaire getal 101 betekent:
+          
+          1 keer 4 + 0 keer 2 + 1 keer 1 = 5 in ons decimale systeem.</p>
+          <h1>Waarom gebruiken computers binair?</h1>
+          <p>Computers werken met elektrische stroom, die aan (1) of uit (0) kan staan. Daarom gebruiken ze het binaire systeem om gegevens op te slaan en te verwerken.</p>
+
+            <p>Kortom: het binaire stelsel gebruikt alleen 0 en 1, en het is de taal die computers begrijpen!</p>
+      <p>Hieronder zie je een spel genaamd Binary Bonzanza. Het is een leuk spel die je helpt met het binaire stelsel.</p>
       <iframe src="https://games.penjee.com/binary-bonanza/game.php" width="700" height="500" frameborder="no" scrolling="no" ></iframe>
     </body>
     </html> 
