--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       </ul>   
        <h1>Deniz Yilmaz</h1>
        <p style="font-size:medium;">Hallo en welkom bij mijn website!</p>
+       <p>Op deze site zul je informatie vinden over mij, het binaire stelsel, kleurmodellen, bitmap- en vectorafbeeldingen en compressie.
+        Ik heb geprobeerd om de uitleg zo makkelijk mogelijk te maken. 
+       </p>
        <p>Ik wens je veel plezier bij het ontdekken van deze site.</p>
        <img src="emoji.png" alt="Emoji" width="100" height="100">    
    </body>
