--- a/pagina3.html
+++ b/pagina3.html
@@ -13,9 +13,9 @@
       <li><a href="pagina7.html">Compressie</a></li>
       </ul>
       <h1>Over mij</h1>
-      <p>Mijn naam is Deniz Yilmaz en ik ben 15 jaar oud. Ik zit op het Vlietland College en ik doe Havo 4. 
+      <p>Mijn naam is Deniz Yilmaz en ik ben 15 jaar oud. Ik zit op het Vlietland College en ik doe Havo 4. Ik heb het vakkenpakket C&M gekozen met natuurlijk informatica erbij. 
          Mijn favoriete vak is informatica. Later wil ik ook graag informatica studeren aan de Hogeschool van Leiden.
-         Mijn hobbys zijn voetballen en gamen. Ik zou het leuk vinden om later een game te maken of te werken bij grote bedrijven zoals Google.
+         Mijn hobbys zijn voetballen en gamen. Dit doe ik graag samen met mijn vrienden. Ik zou het leuk vinden om later een game te maken of te werken bij grote bedrijven zoals Google.
       </p>
       <img src="VLC.png" alt="VLC">
 </body>
