--- a/pagina5.html
+++ b/pagina5.html
@@ -18,9 +18,8 @@
        <p>RGB staat voor Rood Groen Blauw, de 3 belangrijkste kleuren. Kleuren worden gemaakt door deze 3 te combineren. Meer licht maakt de kleur lichter.
          Het wordt gebruikt op shcermen zoals televisies of computers.</p>
          <h1>CMYK</h1>
-         <p>CMYK staat voor Cyan, Magenta, Yellow en Key. Net als RGB is het een systeem om kleuren vast te leggen in een code. 
-          Hieronder zie je een afbeelding en het verschil tussen CMYK en RGB.
-         </p>
+         <p>CMYK staat voor Cyan, Magenta, Yellow en Key. Net als RGB is het een systeem om kleuren vast te leggen in een code.</p>
+         <p>Hieronder zie je een afbeelding en het verschil tussen CMYK en RGB.</p> 
        <img src="RGBCMYK.png" alt="RGB en CMYK">
     </body>
     </html>
