--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
        <p>Deze website is volledig door ik, Deniz Yilmaz gemaakt. Ik heb hulpbronnen zoals W3 schools, Youtube en Google Classroom gebruikt. De informatie die is geschreven bij de verschillende onderwerpen is opgezocht vanuit het internet en Google Classroom. De meeste code heb ik van W3 schools. </p>
        <p>Ik wens je veel plezier bij het ontdekken van deze site.</p>
        <img src="emoji.png" alt="Emoji" width="100" height="100">    
-   <footer>Deze site is gemaakt door Deniz Yilmaz <br>Heb je nog vragen mail dan naar<a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=deniz.yilmaz@vlietlandcollege.nl">deniz.yilmaz@vlietlandcollege.nl</a> </footer>
+   <footer class="center-text"> Deze site is gemaakt door Deniz Yilmaz</footer> <br>Heb je nog vragen mail dan naar <a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=deniz.yilmaz@vlietlandcollege.nl">deniz.yilmaz@vlietlandcollege.nl</a> </footer>
     </body>
 </html>
