--- a/pagina6.html
+++ b/pagina6.html
@@ -24,6 +24,7 @@
       <p>Ideal voor: Logo's, illustraties, en ontwerpen die je vaak wilt vergroten of verkleinen. </p>
       <p>Nadeel: Minder geschikt voor realistische foto's, zoals landschap afbeeldingen.</p>
       <p>Je moet dus eigenlijk van te voren weten wat voor afbeelding je gaat gebruiken en op basis daarvan kiezen tussen een Bitmap- of vectorafbeelding.</p> 
+      <img src="vectorbitmap.jpg" alt="Verschil tussen Vector en Bitmap-afbeelding">
        <body>
         <html>
         
