--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        <p>Op deze site zul je informatie vinden over mij, het binaire stelsel, kleurmodellen, bitmap- en vectorafbeeldingen en compressie.
         Ik heb geprobeerd om de uitleg zo makkelijk mogelijk te maken. 
        </p>
-       <h1>Algemene informatie</h1>
+       <h1>Voordat je verder gaat</h1>
        <p>Deze website is volledig door ik, Deniz Yilmaz gemaakt. Ik heb hulpbronnen zoals W3 schools, Youtube en Google Classroom gebruikt. De informatie die is geschreven bij de verschillende onderwerpen is opgezocht vanuit het internet en Google Classroom. De meeste code heb ik van W3 schools. </p>
        <p>Ik wens je veel plezier bij het ontdekken van deze site.</p>
        <img src="emoji.png" alt="Emoji" width="200" height="200">    
