--- a/pagina7.html
+++ b/pagina7.html
@@ -31,6 +31,6 @@
             <p>Minder ruimte: Je kunt meer bestanden opslaan.</p>
             <p>Sneller versturen: Kleine bestanden kunnen sneller via internet verstuurd worden.</p>
             <p>Kortom, verliesloze compressie houdt de kwaliteit, en verlieslatende compressie maakt het bestand veel kleiner, maar kan wat details verliezen.</p>
-            <img src="maxresdefault (1).jpg" alt="Compressie Verschil">
+            <img src="compressie.jpg" alt="Compressie Verschil">
        <body>
         <html>
