--- a/pagina4.html
+++ b/pagina4.html
@@ -13,7 +13,7 @@
          <li><a href="pagina7.html">Compressie</a></li>
       </ul>
       <h1>Het Binaire Stelsel / Wat is het?</h1>
-      <p>Het binaire stelsel is een manier van tellen met alleen de cijfers 0 en 1. Computers gebruiken dit systeem omdat ze alleen twee toestanden kunnen herkennen: aan (1) en uit (0).</p>
+      <p>Het binaire stelsel is een manier van tellen met alleen de cijfers 0 en 1. Computers gebruiken dit systeem omdat ze alleen twee situaties kunnen herkennen: aan (1) en uit (0).</p>
       <h1>Hoe werkt het binaire stelsel?</h1>  
       <p>Net zoals wij tellen met de cijfers 0 tot 9 (decimaal), telt het binaire systeem met alleen 0 en 1. In plaats van dat de getallen oplopen met tientallen, zoals in ons systeem (10, 100, 1000), lopen ze in binair op met tweetallen:
 
