--- a/pagina5.html
+++ b/pagina5.html
@@ -20,6 +20,11 @@
          <h1>CMYK</h1>
          <p>CMYK staat voor Cyan, Magenta, Yellow en Key. Net als RGB is het een systeem om kleuren vast te leggen in een code. CMYK wordt meer gebruikt om donkerdere kleuren te maken.</p>
          <p>Hieronder zie je een afbeelding en het verschil tussen CMYK en RGB.</p> 
-       <img src="RGBCMYK.png" alt="RGB en CMYK">
+         <img src="RGBCMYK.png" alt="RGB en CMYK">
+         <h1>Pixels</h1>
+         <p>Pixels zijn kleine gekleurde puntjes die samen een afbeelding op een scherm maken. Hoe meer pixels er zijn, hoe scherper het beeld. Als je inzoomt op een foto, zie je dat het uit kleine vierkantjes bestaat, dat zijn de pixels! Op een scherp scherm zie je die puntjes niet met het blote oog, maar samen maken ze de afbeelding die je ziet.
+          Pixels gebruiken een mix van rood, groen en blauw om verschillende kleuren te maken. Door deze kleuren te mengen, kunnen ze heel veel verschillende kleuren weergeven.</p>
+          <h1>Resolutie</h1>
+          <p>Resolutie vertelt je hoeveel pixels er in een afbeelding of op een scherm zitten. Het wordt meestal aangegeven met twee getallen, bijvoorbeeld 1920x1080. Dit betekent dat het beeld 1920 pixels breed is en 1080 pixels hoog.</p>
     </body>
     </html>
