--- a/pagina3.html
+++ b/pagina3.html
@@ -18,7 +18,7 @@
          Mijn hobbys zijn voetballen en gamen. Dit doe ik graag samen met mijn vrienden. Ik zou het leuk vinden om later een game te maken of te werken bij grote bedrijven zoals Google, Meta, Apple enzovoort.</p>
       <p>Dit is mijn vakkenpakket: Engels, Nederlands, Aardrijkskunde, Cultuur en Kunstzinnige vorming, Bewegen en Sport, Duits, Frans, Geschiedenis, Informatica, LEF en Maatschappijleer. Ik ben tot nu toe erg tevreden met mijn vakken.</p>
       <p>Hieronder vindt je een foto van mijn school.</p>
-      <img src="VLC.png" alt="VLC">
+      <img src="VLC.png" alt="VLC" width="500" height="500">
 </body>
 </html>    
        
