--- a/pagina5.html
+++ b/pagina5.html
@@ -24,7 +24,7 @@
          <h1>Pixels</h1>
          <p>Pixels zijn kleine gekleurde puntjes die samen een afbeelding op een scherm maken. Hoe meer pixels er zijn, hoe scherper het beeld. Als je inzoomt op een foto, zie je dat het uit kleine vierkantjes bestaat, dat zijn de pixels! Op een scherp scherm zie je die puntjes niet met het blote oog, maar samen maken ze de afbeelding die je ziet.
           Pixels gebruiken een mix van rood, groen en blauw om verschillende kleuren te maken. Door deze kleuren te mengen, kunnen ze heel veel verschillende kleuren weergeven.</p>
-          <img src="pixels.jpg" alt="Pixels">
+          <img src="pixels.jpg" alt="Pixels" width="200" height="200">
           <h1>Resolutie</h1>
           <p>Resolutie vertelt je hoeveel pixels er in een afbeelding of op een scherm zitten. Het wordt meestal aangegeven met twee getallen, bijvoorbeeld 1920x1080. Dit betekent dat het beeld 1920 pixels breed is en 1080 pixels hoog.</p>
           <img src="hoog-laag.jpg" alt="Resolutie">
