--- a/pagina4.html
+++ b/pagina4.html
@@ -35,5 +35,6 @@
       De letter "a" heeft de code 97.
       Het cijfer "1" heeft de code 49.
       Een spatie heeft de code 32.</p>
+      <img src="ascii.webp" alt="ASCII-tabel">
     </body>
     </html> 
