--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
        <link rel="stylesheet" href="opmaak.css">
    </head> 
    <body>
-    <ul>
+    <ul> <!-- dit is de menu -->
         <li><a href="index.html">Home</a></li>
         <li><a href="pagina3.html">Over mij</a></li>
         <li><a href="pagina4.html">Het Binaire Stelsel</a></li>
@@ -12,14 +12,14 @@
         <li><a href="pagina6.html">Bitmap- en Vectorafbeeldingen</a></li>
         <li><a href="pagina7.html">Compressie</a></li>
       </ul>   
-       <h1>Deniz Yilmaz</h1>
+       <h1>Deniz Yilmaz</h1> <!-- mijn naam met h1 -->
        <p style="font-size:medium;">Hallo en welkom bij mijn website!</p>
        <p>Op deze site zul je informatie vinden over mij, het binaire stelsel, kleurmodellen, bitmap- en vectorafbeeldingen en compressie.
         Ik heb geprobeerd om de uitleg zo makkelijk mogelijk te maken. 
        </p>
-       <h1>Voordat je verder gaat</h1>
+       <h1>Voordat je verder gaat</h1> <!-- Voordat je verder gaat uitleg in h1 ook -->
        <p>Deze website is volledig door ik, Deniz Yilmaz gemaakt. Ik heb hulpbronnen zoals W3 schools, Youtube en Google Classroom gebruikt. De informatie die is geschreven bij de verschillende onderwerpen is opgezocht vanuit het internet en Google Classroom. De meeste code heb ik van W3 schools. </p>
        <p>Ik wens je veel plezier bij het ontdekken van deze site.</p>
-       <img src="emoji.png" alt="Emoji" width="200" height="200">    
+       <img src="emoji.png" alt="Emoji" width="200" height="200"> <!-- foto van een emoji de breedte is 200 en de hoogte ook -->   
     </body>
 </html>
