--- a/bitmapvector.html
+++ b/bitmapvector.html
@@ -5,12 +5,12 @@
    </head> 
      <body>
       <ul>
-         <li><a href="index.html">Home</a></li>
-         <li><a href="pagina3.html">Over mij</a></li>
-         <li><a href="pagina4.html">Het Binaire Stelsel</a></li>
-         <li><a href="pagina5.html">Kleurmodellen</a></li>
-         <li><a href="pagina6.html">Bitmap- en Vectorafbeeldingen</a></li>
-         <li><a href="pagina7.html">Compressie</a></li>
+        <li><a href="homepagina.html">Home</a></li>
+        <li><a href="overmij.html">Over mij</a></li>
+        <li><a href="binairestelsel.html">Het Binaire Stelsel</a></li>
+        <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+        <li><a href="bitmapvector.html">Bitmap- en Vectorafbeeldingen</a></li>
+        <li><a href="compressie.html">Compressie</a></li>
        </ul>
        <h1>Bitmap- en Vectorafbeeldingen / Wat zijn het?</h1>
        <h1>Bitmap-afbeelding</h1>
