--- a/homepagina.html
+++ b/homepagina.html
@@ -5,12 +5,12 @@
    </head> 
    <body>
     <ul> <!-- dit is de menu -->
-        <li><a href="index.html">Home</a></li>
-        <li><a href="pagina3.html">Over mij</a></li>
-        <li><a href="pagina4.html">Het Binaire Stelsel</a></li>
-        <li><a href="pagina5.html">Kleurmodellen</a></li>
-        <li><a href="pagina6.html">Bitmap- en Vectorafbeeldingen</a></li>
-        <li><a href="pagina7.html">Compressie</a></li>
+        <li><a href="homepagina.html">Home</a></li>
+        <li><a href="overmij.html">Over mij</a></li>
+        <li><a href="binairestelsel.html">Het Binaire Stelsel</a></li>
+        <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+        <li><a href="bitmapvector.html">Bitmap- en Vectorafbeeldingen</a></li>
+        <li><a href="compressie.html">Compressie</a></li>
       </ul>   
        <h1>Deniz Yilmaz</h1> <!-- mijn naam met h1 -->
        <p style="font-size:medium;">Hallo en welkom bij mijn website!</p>
