--- a/overmij.html
+++ b/overmij.html
@@ -5,12 +5,12 @@
 </head> 
 <body>
     <ul>
-      <li><a href="homepagina.html">Home</a></li>
-      <li><a href="overmij.html">Over mij</a></li>
-      <li><a href="binairestelsel.html">Het Binaire Stelsel</a></li>
-      <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
-      <li><a href="bitmapvector.html">Bitmap- en Vectorafbeeldingen</a></li>
-      <li><a href="compressie.html">Compressie</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="overmij.html">Over mij</a></li>
+        <li><a href="binairestelsel.html">Het Binaire Stelsel</a></li>
+        <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+        <li><a href="bitmapvector.html">Bitmap- en Vectorafbeeldingen</a></li>
+        <li><a href="compressie.html">Compressie</a></li>
     </ul>
       <h1>Over mij</h1>
       <p>Mijn naam is Deniz Yilmaz en ik ben 15 jaar oud. Ik ben geboren in Nederland, Leiderdorp maar mijn ouders komen uit Turkije. Ik zie mezelf als een Turk. Ik zit op het Vlietland College en ik doe Havo 4. Ik heb het vakkenpakket C&M gekozen met natuurlijk informatica erbij. 
