--- a/bitmapvector.html
+++ b/bitmapvector.html
@@ -5,7 +5,7 @@
    </head> 
      <body>
       <ul>
-        <li><a href="homepagina.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="overmij.html">Over mij</a></li>
         <li><a href="binairestelsel.html">Het Binaire Stelsel</a></li>
         <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
