--- a/binairestelsel.html
+++ b/binairestelsel.html
@@ -5,12 +5,13 @@
 </head> 
 <body>
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="overmij.html">Over mij</a></li>
-        <li><a href="binairestelsel.html">Het Binaire Stelsel</a></li>
-        <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
-        <li><a href="bitmapvector.html">Bitmap- en Vectorafbeeldingen</a></li>
-        <li><a href="compressie.html">Compressie</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="overmij.html">Over mij</a></li>
+      <li><a href="binairestelsel.html">Het Binaire Stelsel</a></li>
+      <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+      <li><a href="bitmapvector.html">Bitmap- en Vectorafbeeldingen</a></li>
+      <li><a href="compressie.html">Compressie</a></li>
+      <li><a href="algemene informatie.html">Algemene Informatie</a></li>
       </ul>
       <h1>Het Binaire Stelsel / Wat is het?</h1>
       <p>Het binaire stelsel is een manier van tellen met alleen de cijfers 0 en 1. Computers gebruiken dit systeem omdat ze alleen twee situaties kunnen herkennen: aan (1) en uit (0).</p>
