--- a/compressie.html
+++ b/compressie.html
@@ -11,6 +11,7 @@
         <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
         <li><a href="bitmapvector.html">Bitmap- en Vectorafbeeldingen</a></li>
         <li><a href="compressie.html">Compressie</a></li>
+        <li><a href="algemene informatie.html">Algemene Informatie</a></li>
        </ul>
        <h1>Compressie / Wat is het?</h1>
        <p>Compressie is een manier om bestanden kleiner te maken, zodat ze minder ruimte innemen of sneller verstuurd kunnen worden. 
