--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
         <li><a href="bitmapvector.html">Bitmap- en Vectorafbeeldingen</a></li>
         <li><a href="compressie.html">Compressie</a></li>
+        <li><a href="algemene informatie.html">Algemene Informatie</a></li>
       </ul>   
        <h1>Deniz Yilmaz</h1> <!-- mijn naam met h1 -->
        <p style="font-size:medium;">Hallo en welkom bij mijn website!</p>
