--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -11,6 +11,7 @@
         <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
         <li><a href="bitmapvector.html">Bitmap- en Vectorafbeeldingen</a></li>
         <li><a href="compressie.html">Compressie</a></li>
+        <li><a href="algemene informatie.html">Algemene Informatie</a></li>
        </ul>   
        <h1>Kleurmodellen / Wat zijn het?</h1>
        <p>Kleurmodellen zijn systemen die ons helpen kleuren op een gestructureerde manier te beschrijven. Ze zijn belangrijk omdat ze bepalen hoe kleuren worden weergegeven op verschillende apparaten, zoals computerschermen en printers. Elk kleurmodel heeft een eigen manier om kleuren te definiëren, afhankelijk van hoe kleuren worden gecombineerd en weergegeven.</p>
