--- a/bitmapvector.html
+++ b/bitmapvector.html
@@ -11,6 +11,7 @@
         <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
         <li><a href="bitmapvector.html">Bitmap- en Vectorafbeeldingen</a></li>
         <li><a href="compressie.html">Compressie</a></li>
+        <li><a href="algemene informatie.html">Algemene Informatie</a></li>
        </ul>
        <h1>Bitmap- en Vectorafbeeldingen / Wat zijn het?</h1>
        <h1>Bitmap-afbeelding</h1>
