--- a/algemene informatie.html
+++ b/algemene informatie.html
@@ -14,6 +14,6 @@
         <li><a href="algemene informatie.html">Algemene Informatie</a></li>
     </ul>
     <h1>Algemene Informatie</h1>
-    <p></p>
+    <p>Bij informatica is er een basisregel: Invoer, Verwerking en Uitvoer. Invoer is alle data die een computer opneemt. De computer gebruikt deze data om ermee aan de slag te gaan. Stel dat je je eigen naam schrijft met een toetsenbord, dat is een voorbeeld van invoer. De computer neemt de data op en verwerkt het: Verwerking. Verwerking is het process dat na de invoer komt. De computer gaat dan aan het werk met de gegevens en zorgt voor een bepaald resultaat: Uitvoer. Na de verwerking toont de computer het resultaat via bijvoorbeeld een scherm. Dus als je je eigen naam op een toetsenbord typt is dat invoer, de computer verwerkt dat en laat het zien op het scherm, wat dus uitvoer is. Het is eigenlijk een best simpel process maar wel heel erg belangrijk.</p>
 </body>
 </html>
