--- a/binairestelsel.html
+++ b/binairestelsel.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="opmaak.css">
 </head> 
 <body>
-    <ul>
+    <ul> <!-- dit is de menu -->
       <li><a href="index.html">Home</a></li>
       <li><a href="overmij.html">Over mij</a></li>
       <li><a href="binairestelsel.html">Het Binaire Stelsel</a></li>
@@ -28,7 +28,7 @@
 
             <p>Kortom: het binaire stelsel gebruikt alleen 0 en 1, en het is de taal die computers begrijpen!</p>
       <p>Hieronder zie je een spel genaamd Binary Bonzanza. Het is een leuk spel die je helpt met het binaire stelsel.</p>
-      <iframe src="https://games.penjee.com/binary-bonanza/game.php" width="700" height="500" frameborder="no" scrolling="no" ></iframe>
+      <iframe src="https://games.penjee.com/binary-bonanza/game.php" width="700" height="500" frameborder="no" scrolling="no" ></iframe> <!-- dit is de code voor de spel binary bonanza. De breedte is 700 en de hoogte is 500. Er is geen border en je kan niet scrollen. -->
     <h1>ASCII Tabel</h1>
     <p>De ASCII-tabel (American Standard Code for Information Interchange) is een lijst van codes die computers gebruiken om letters, cijfers, symbolen en besturingscommando's te begrijpen en weer te geven. Elk teken of symbool dat je op je toetsenbord ziet, heeft een bijbehorende ASCII-code, die in feite een getal is.</p>
     <p>De ASCII-tabel zet tekens zoals letters (A, B, C), cijfers (1, 2, 3) en speciale symbolen (@, #, &) om in getallen. Computers kunnen alleen werken met getallen, dus de ASCII-tabel helpt ze begrijpen welke tekens ze moeten laten zien of verwerken.</p>
