--- a/overmij.html
+++ b/overmij.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="opmaak.css">
 </head> 
 <body>
-    <ul>
+    <ul> <!-- dit is de menu -->
       <li><a href="index.html">Home</a></li>
       <li><a href="overmij.html">Over mij</a></li>
       <li><a href="binairestelsel.html">Het Binaire Stelsel</a></li>
